fixed deprecated use of Double(double)